// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Droplist matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Droplist
    classes={
      Object {
        "block": "block",
        "extraText": "extraText",
        "extraTextColor": "extraTextColor",
        "group": "group",
        "icon": "icon",
        "iconText": "iconText",
        "item": "item",
        "itemPointer": "itemPointer",
        "onFocus": "onFocus",
        "right": "right",
      }
    }
    filter={true}
    groupIdKey="id"
    groupItemsKey="items"
    groupNameKey="text"
    groups={false}
    itemIdKey="id"
    itemTextKey="text"
    itemTextRightKey="textRight"
    items={
      Array [
        Object {
          "id": 1,
          "text": "Administrador",
          "textRight": "(222)",
        },
        Object {
          "id": 2,
          "text": "Administrador Sr",
          "textRight": "(134)",
        },
        Object {
          "id": 3,
          "text": "Administrador Jr",
          "textRight": "(52)",
        },
        Object {
          "id": 4,
          "text": "Administrar",
          "textRight": "(6)",
        },
        Object {
          "id": 5,
          "text": "Comunicación",
          "textRight": "(6)",
        },
      ]
    }
    term=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="item itemPointer"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
        >
          <div>
            <Jss(Text)
              className=""
              low={undefined}
              tag="p"
            >
              
              <Jss(Text)
                low={undefined}
                strong={true}
                tag="b"
              >
                
              </Jss(Text)>
              Administrador
            </Jss(Text)>
          </div>
          <span
            className="right"
          >
            <Jss(Text)
              low={true}
              tag="span"
            >
              (222)
            </Jss(Text)>
          </span>
        </div>,
        <div
          className="item itemPointer"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
        >
          <div>
            <Jss(Text)
              className=""
              low={undefined}
              tag="p"
            >
              
              <Jss(Text)
                low={undefined}
                strong={true}
                tag="b"
              >
                
              </Jss(Text)>
              Administrador Sr
            </Jss(Text)>
          </div>
          <span
            className="right"
          >
            <Jss(Text)
              low={true}
              tag="span"
            >
              (134)
            </Jss(Text)>
          </span>
        </div>,
        <div
          className="item itemPointer"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
        >
          <div>
            <Jss(Text)
              className=""
              low={undefined}
              tag="p"
            >
              
              <Jss(Text)
                low={undefined}
                strong={true}
                tag="b"
              >
                
              </Jss(Text)>
              Administrador Jr
            </Jss(Text)>
          </div>
          <span
            className="right"
          >
            <Jss(Text)
              low={true}
              tag="span"
            >
              (52)
            </Jss(Text)>
          </span>
        </div>,
        <div
          className="item itemPointer"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
        >
          <div>
            <Jss(Text)
              className=""
              low={undefined}
              tag="p"
            >
              
              <Jss(Text)
                low={undefined}
                strong={true}
                tag="b"
              >
                
              </Jss(Text)>
              Administrar
            </Jss(Text)>
          </div>
          <span
            className="right"
          >
            <Jss(Text)
              low={true}
              tag="span"
            >
              (6)
            </Jss(Text)>
          </span>
        </div>,
        <div
          className="item itemPointer"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
        >
          <div>
            <Jss(Text)
              className=""
              low={undefined}
              tag="p"
            >
              
              <Jss(Text)
                low={undefined}
                strong={true}
                tag="b"
              >
                
              </Jss(Text)>
              Comunicación
            </Jss(Text)>
          </div>
          <span
            className="right"
          >
            <Jss(Text)
              low={true}
              tag="span"
            >
              (6)
            </Jss(Text)>
          </span>
        </div>,
      ],
      "className": "block",
      "id": undefined,
      "style": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div>
              <Jss(Text)
                className=""
                low={undefined}
                tag="p"
              >
                
                <Jss(Text)
                  low={undefined}
                  strong={true}
                  tag="b"
                >
                  
                </Jss(Text)>
                Administrador
              </Jss(Text)>
            </div>,
            <span
              className="right"
            >
              <Jss(Text)
                low={true}
                tag="span"
              >
                (222)
              </Jss(Text)>
            </span>,
          ],
          "className": "item itemPointer",
          "onClick": [Function],
          "onMouseDown": [Function],
          "onMouseUp": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                undefined,
                <Jss(Text)
                  className=""
                  low={undefined}
                  tag="p"
                >
                  
                  <Jss(Text)
                    low={undefined}
                    strong={true}
                    tag="b"
                  >
                    
                  </Jss(Text)>
                  Administrador
                </Jss(Text)>,
              ],
            },
            "ref": null,
            "rendered": Array [
              undefined,
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    "",
                    <Jss(Text)
                      low={undefined}
                      strong={true}
                      tag="b"
                    >
                      
                    </Jss(Text)>,
                    "Administrador",
                    undefined,
                  ],
                  "className": "",
                  "low": undefined,
                  "tag": "p",
                },
                "ref": null,
                "rendered": Array [
                  "",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "",
                      "low": undefined,
                      "strong": true,
                      "tag": "b",
                    },
                    "ref": null,
                    "rendered": "",
                    "type": [Function],
                  },
                  "Administrador",
                  undefined,
                ],
                "type": [Function],
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Jss(Text)
                low={true}
                tag="span"
              >
                (222)
              </Jss(Text)>,
              "className": "right",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "(222)",
                "low": true,
                "tag": "span",
              },
              "ref": null,
              "rendered": "(222)",
              "type": [Function],
            },
            "type": "span",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": "2",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div>
              <Jss(Text)
                className=""
                low={undefined}
                tag="p"
              >
                
                <Jss(Text)
                  low={undefined}
                  strong={true}
                  tag="b"
                >
                  
                </Jss(Text)>
                Administrador Sr
              </Jss(Text)>
            </div>,
            <span
              className="right"
            >
              <Jss(Text)
                low={true}
                tag="span"
              >
                (134)
              </Jss(Text)>
            </span>,
          ],
          "className": "item itemPointer",
          "onClick": [Function],
          "onMouseDown": [Function],
          "onMouseUp": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                undefined,
                <Jss(Text)
                  className=""
                  low={undefined}
                  tag="p"
                >
                  
                  <Jss(Text)
                    low={undefined}
                    strong={true}
                    tag="b"
                  >
                    
                  </Jss(Text)>
                  Administrador Sr
                </Jss(Text)>,
              ],
            },
            "ref": null,
            "rendered": Array [
              undefined,
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    "",
                    <Jss(Text)
                      low={undefined}
                      strong={true}
                      tag="b"
                    >
                      
                    </Jss(Text)>,
                    "Administrador Sr",
                    undefined,
                  ],
                  "className": "",
                  "low": undefined,
                  "tag": "p",
                },
                "ref": null,
                "rendered": Array [
                  "",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "",
                      "low": undefined,
                      "strong": true,
                      "tag": "b",
                    },
                    "ref": null,
                    "rendered": "",
                    "type": [Function],
                  },
                  "Administrador Sr",
                  undefined,
                ],
                "type": [Function],
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Jss(Text)
                low={true}
                tag="span"
              >
                (134)
              </Jss(Text)>,
              "className": "right",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "(134)",
                "low": true,
                "tag": "span",
              },
              "ref": null,
              "rendered": "(134)",
              "type": [Function],
            },
            "type": "span",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": "3",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div>
              <Jss(Text)
                className=""
                low={undefined}
                tag="p"
              >
                
                <Jss(Text)
                  low={undefined}
                  strong={true}
                  tag="b"
                >
                  
                </Jss(Text)>
                Administrador Jr
              </Jss(Text)>
            </div>,
            <span
              className="right"
            >
              <Jss(Text)
                low={true}
                tag="span"
              >
                (52)
              </Jss(Text)>
            </span>,
          ],
          "className": "item itemPointer",
          "onClick": [Function],
          "onMouseDown": [Function],
          "onMouseUp": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                undefined,
                <Jss(Text)
                  className=""
                  low={undefined}
                  tag="p"
                >
                  
                  <Jss(Text)
                    low={undefined}
                    strong={true}
                    tag="b"
                  >
                    
                  </Jss(Text)>
                  Administrador Jr
                </Jss(Text)>,
              ],
            },
            "ref": null,
            "rendered": Array [
              undefined,
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    "",
                    <Jss(Text)
                      low={undefined}
                      strong={true}
                      tag="b"
                    >
                      
                    </Jss(Text)>,
                    "Administrador Jr",
                    undefined,
                  ],
                  "className": "",
                  "low": undefined,
                  "tag": "p",
                },
                "ref": null,
                "rendered": Array [
                  "",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "",
                      "low": undefined,
                      "strong": true,
                      "tag": "b",
                    },
                    "ref": null,
                    "rendered": "",
                    "type": [Function],
                  },
                  "Administrador Jr",
                  undefined,
                ],
                "type": [Function],
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Jss(Text)
                low={true}
                tag="span"
              >
                (52)
              </Jss(Text)>,
              "className": "right",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "(52)",
                "low": true,
                "tag": "span",
              },
              "ref": null,
              "rendered": "(52)",
              "type": [Function],
            },
            "type": "span",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": "4",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div>
              <Jss(Text)
                className=""
                low={undefined}
                tag="p"
              >
                
                <Jss(Text)
                  low={undefined}
                  strong={true}
                  tag="b"
                >
                  
                </Jss(Text)>
                Administrar
              </Jss(Text)>
            </div>,
            <span
              className="right"
            >
              <Jss(Text)
                low={true}
                tag="span"
              >
                (6)
              </Jss(Text)>
            </span>,
          ],
          "className": "item itemPointer",
          "onClick": [Function],
          "onMouseDown": [Function],
          "onMouseUp": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                undefined,
                <Jss(Text)
                  className=""
                  low={undefined}
                  tag="p"
                >
                  
                  <Jss(Text)
                    low={undefined}
                    strong={true}
                    tag="b"
                  >
                    
                  </Jss(Text)>
                  Administrar
                </Jss(Text)>,
              ],
            },
            "ref": null,
            "rendered": Array [
              undefined,
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    "",
                    <Jss(Text)
                      low={undefined}
                      strong={true}
                      tag="b"
                    >
                      
                    </Jss(Text)>,
                    "Administrar",
                    undefined,
                  ],
                  "className": "",
                  "low": undefined,
                  "tag": "p",
                },
                "ref": null,
                "rendered": Array [
                  "",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "",
                      "low": undefined,
                      "strong": true,
                      "tag": "b",
                    },
                    "ref": null,
                    "rendered": "",
                    "type": [Function],
                  },
                  "Administrar",
                  undefined,
                ],
                "type": [Function],
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Jss(Text)
                low={true}
                tag="span"
              >
                (6)
              </Jss(Text)>,
              "className": "right",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "(6)",
                "low": true,
                "tag": "span",
              },
              "ref": null,
              "rendered": "(6)",
              "type": [Function],
            },
            "type": "span",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": "5",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div>
              <Jss(Text)
                className=""
                low={undefined}
                tag="p"
              >
                
                <Jss(Text)
                  low={undefined}
                  strong={true}
                  tag="b"
                >
                  
                </Jss(Text)>
                Comunicación
              </Jss(Text)>
            </div>,
            <span
              className="right"
            >
              <Jss(Text)
                low={true}
                tag="span"
              >
                (6)
              </Jss(Text)>
            </span>,
          ],
          "className": "item itemPointer",
          "onClick": [Function],
          "onMouseDown": [Function],
          "onMouseUp": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                undefined,
                <Jss(Text)
                  className=""
                  low={undefined}
                  tag="p"
                >
                  
                  <Jss(Text)
                    low={undefined}
                    strong={true}
                    tag="b"
                  >
                    
                  </Jss(Text)>
                  Comunicación
                </Jss(Text)>,
              ],
            },
            "ref": null,
            "rendered": Array [
              undefined,
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    "",
                    <Jss(Text)
                      low={undefined}
                      strong={true}
                      tag="b"
                    >
                      
                    </Jss(Text)>,
                    "Comunicación",
                    undefined,
                  ],
                  "className": "",
                  "low": undefined,
                  "tag": "p",
                },
                "ref": null,
                "rendered": Array [
                  "",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "",
                      "low": undefined,
                      "strong": true,
                      "tag": "b",
                    },
                    "ref": null,
                    "rendered": "",
                    "type": [Function],
                  },
                  "Comunicación",
                  undefined,
                ],
                "type": [Function],
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Jss(Text)
                low={true}
                tag="span"
              >
                (6)
              </Jss(Text)>,
              "className": "right",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "(6)",
                "low": true,
                "tag": "span",
              },
              "ref": null,
              "rendered": "(6)",
              "type": [Function],
            },
            "type": "span",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="item itemPointer"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
          >
            <div>
              <Jss(Text)
                className=""
                low={undefined}
                tag="p"
              >
                
                <Jss(Text)
                  low={undefined}
                  strong={true}
                  tag="b"
                >
                  
                </Jss(Text)>
                Administrador
              </Jss(Text)>
            </div>
            <span
              className="right"
            >
              <Jss(Text)
                low={true}
                tag="span"
              >
                (222)
              </Jss(Text)>
            </span>
          </div>,
          <div
            className="item itemPointer"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
          >
            <div>
              <Jss(Text)
                className=""
                low={undefined}
                tag="p"
              >
                
                <Jss(Text)
                  low={undefined}
                  strong={true}
                  tag="b"
                >
                  
                </Jss(Text)>
                Administrador Sr
              </Jss(Text)>
            </div>
            <span
              className="right"
            >
              <Jss(Text)
                low={true}
                tag="span"
              >
                (134)
              </Jss(Text)>
            </span>
          </div>,
          <div
            className="item itemPointer"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
          >
            <div>
              <Jss(Text)
                className=""
                low={undefined}
                tag="p"
              >
                
                <Jss(Text)
                  low={undefined}
                  strong={true}
                  tag="b"
                >
                  
                </Jss(Text)>
                Administrador Jr
              </Jss(Text)>
            </div>
            <span
              className="right"
            >
              <Jss(Text)
                low={true}
                tag="span"
              >
                (52)
              </Jss(Text)>
            </span>
          </div>,
          <div
            className="item itemPointer"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
          >
            <div>
              <Jss(Text)
                className=""
                low={undefined}
                tag="p"
              >
                
                <Jss(Text)
                  low={undefined}
                  strong={true}
                  tag="b"
                >
                  
                </Jss(Text)>
                Administrar
              </Jss(Text)>
            </div>
            <span
              className="right"
            >
              <Jss(Text)
                low={true}
                tag="span"
              >
                (6)
              </Jss(Text)>
            </span>
          </div>,
          <div
            className="item itemPointer"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
          >
            <div>
              <Jss(Text)
                className=""
                low={undefined}
                tag="p"
              >
                
                <Jss(Text)
                  low={undefined}
                  strong={true}
                  tag="b"
                >
                  
                </Jss(Text)>
                Comunicación
              </Jss(Text)>
            </div>
            <span
              className="right"
            >
              <Jss(Text)
                low={true}
                tag="span"
              >
                (6)
              </Jss(Text)>
            </span>
          </div>,
        ],
        "className": "block",
        "id": undefined,
        "style": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div>
                <Jss(Text)
                  className=""
                  low={undefined}
                  tag="p"
                >
                  
                  <Jss(Text)
                    low={undefined}
                    strong={true}
                    tag="b"
                  >
                    
                  </Jss(Text)>
                  Administrador
                </Jss(Text)>
              </div>,
              <span
                className="right"
              >
                <Jss(Text)
                  low={true}
                  tag="span"
                >
                  (222)
                </Jss(Text)>
              </span>,
            ],
            "className": "item itemPointer",
            "onClick": [Function],
            "onMouseDown": [Function],
            "onMouseUp": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  undefined,
                  <Jss(Text)
                    className=""
                    low={undefined}
                    tag="p"
                  >
                    
                    <Jss(Text)
                      low={undefined}
                      strong={true}
                      tag="b"
                    >
                      
                    </Jss(Text)>
                    Administrador
                  </Jss(Text)>,
                ],
              },
              "ref": null,
              "rendered": Array [
                undefined,
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      "",
                      <Jss(Text)
                        low={undefined}
                        strong={true}
                        tag="b"
                      >
                        
                      </Jss(Text)>,
                      "Administrador",
                      undefined,
                    ],
                    "className": "",
                    "low": undefined,
                    "tag": "p",
                  },
                  "ref": null,
                  "rendered": Array [
                    "",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": "",
                        "low": undefined,
                        "strong": true,
                        "tag": "b",
                      },
                      "ref": null,
                      "rendered": "",
                      "type": [Function],
                    },
                    "Administrador",
                    undefined,
                  ],
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Jss(Text)
                  low={true}
                  tag="span"
                >
                  (222)
                </Jss(Text)>,
                "className": "right",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "(222)",
                  "low": true,
                  "tag": "span",
                },
                "ref": null,
                "rendered": "(222)",
                "type": [Function],
              },
              "type": "span",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div>
                <Jss(Text)
                  className=""
                  low={undefined}
                  tag="p"
                >
                  
                  <Jss(Text)
                    low={undefined}
                    strong={true}
                    tag="b"
                  >
                    
                  </Jss(Text)>
                  Administrador Sr
                </Jss(Text)>
              </div>,
              <span
                className="right"
              >
                <Jss(Text)
                  low={true}
                  tag="span"
                >
                  (134)
                </Jss(Text)>
              </span>,
            ],
            "className": "item itemPointer",
            "onClick": [Function],
            "onMouseDown": [Function],
            "onMouseUp": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  undefined,
                  <Jss(Text)
                    className=""
                    low={undefined}
                    tag="p"
                  >
                    
                    <Jss(Text)
                      low={undefined}
                      strong={true}
                      tag="b"
                    >
                      
                    </Jss(Text)>
                    Administrador Sr
                  </Jss(Text)>,
                ],
              },
              "ref": null,
              "rendered": Array [
                undefined,
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      "",
                      <Jss(Text)
                        low={undefined}
                        strong={true}
                        tag="b"
                      >
                        
                      </Jss(Text)>,
                      "Administrador Sr",
                      undefined,
                    ],
                    "className": "",
                    "low": undefined,
                    "tag": "p",
                  },
                  "ref": null,
                  "rendered": Array [
                    "",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": "",
                        "low": undefined,
                        "strong": true,
                        "tag": "b",
                      },
                      "ref": null,
                      "rendered": "",
                      "type": [Function],
                    },
                    "Administrador Sr",
                    undefined,
                  ],
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Jss(Text)
                  low={true}
                  tag="span"
                >
                  (134)
                </Jss(Text)>,
                "className": "right",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "(134)",
                  "low": true,
                  "tag": "span",
                },
                "ref": null,
                "rendered": "(134)",
                "type": [Function],
              },
              "type": "span",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "3",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div>
                <Jss(Text)
                  className=""
                  low={undefined}
                  tag="p"
                >
                  
                  <Jss(Text)
                    low={undefined}
                    strong={true}
                    tag="b"
                  >
                    
                  </Jss(Text)>
                  Administrador Jr
                </Jss(Text)>
              </div>,
              <span
                className="right"
              >
                <Jss(Text)
                  low={true}
                  tag="span"
                >
                  (52)
                </Jss(Text)>
              </span>,
            ],
            "className": "item itemPointer",
            "onClick": [Function],
            "onMouseDown": [Function],
            "onMouseUp": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  undefined,
                  <Jss(Text)
                    className=""
                    low={undefined}
                    tag="p"
                  >
                    
                    <Jss(Text)
                      low={undefined}
                      strong={true}
                      tag="b"
                    >
                      
                    </Jss(Text)>
                    Administrador Jr
                  </Jss(Text)>,
                ],
              },
              "ref": null,
              "rendered": Array [
                undefined,
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      "",
                      <Jss(Text)
                        low={undefined}
                        strong={true}
                        tag="b"
                      >
                        
                      </Jss(Text)>,
                      "Administrador Jr",
                      undefined,
                    ],
                    "className": "",
                    "low": undefined,
                    "tag": "p",
                  },
                  "ref": null,
                  "rendered": Array [
                    "",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": "",
                        "low": undefined,
                        "strong": true,
                        "tag": "b",
                      },
                      "ref": null,
                      "rendered": "",
                      "type": [Function],
                    },
                    "Administrador Jr",
                    undefined,
                  ],
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Jss(Text)
                  low={true}
                  tag="span"
                >
                  (52)
                </Jss(Text)>,
                "className": "right",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "(52)",
                  "low": true,
                  "tag": "span",
                },
                "ref": null,
                "rendered": "(52)",
                "type": [Function],
              },
              "type": "span",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "4",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div>
                <Jss(Text)
                  className=""
                  low={undefined}
                  tag="p"
                >
                  
                  <Jss(Text)
                    low={undefined}
                    strong={true}
                    tag="b"
                  >
                    
                  </Jss(Text)>
                  Administrar
                </Jss(Text)>
              </div>,
              <span
                className="right"
              >
                <Jss(Text)
                  low={true}
                  tag="span"
                >
                  (6)
                </Jss(Text)>
              </span>,
            ],
            "className": "item itemPointer",
            "onClick": [Function],
            "onMouseDown": [Function],
            "onMouseUp": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  undefined,
                  <Jss(Text)
                    className=""
                    low={undefined}
                    tag="p"
                  >
                    
                    <Jss(Text)
                      low={undefined}
                      strong={true}
                      tag="b"
                    >
                      
                    </Jss(Text)>
                    Administrar
                  </Jss(Text)>,
                ],
              },
              "ref": null,
              "rendered": Array [
                undefined,
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      "",
                      <Jss(Text)
                        low={undefined}
                        strong={true}
                        tag="b"
                      >
                        
                      </Jss(Text)>,
                      "Administrar",
                      undefined,
                    ],
                    "className": "",
                    "low": undefined,
                    "tag": "p",
                  },
                  "ref": null,
                  "rendered": Array [
                    "",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": "",
                        "low": undefined,
                        "strong": true,
                        "tag": "b",
                      },
                      "ref": null,
                      "rendered": "",
                      "type": [Function],
                    },
                    "Administrar",
                    undefined,
                  ],
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Jss(Text)
                  low={true}
                  tag="span"
                >
                  (6)
                </Jss(Text)>,
                "className": "right",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "(6)",
                  "low": true,
                  "tag": "span",
                },
                "ref": null,
                "rendered": "(6)",
                "type": [Function],
              },
              "type": "span",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "5",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div>
                <Jss(Text)
                  className=""
                  low={undefined}
                  tag="p"
                >
                  
                  <Jss(Text)
                    low={undefined}
                    strong={true}
                    tag="b"
                  >
                    
                  </Jss(Text)>
                  Comunicación
                </Jss(Text)>
              </div>,
              <span
                className="right"
              >
                <Jss(Text)
                  low={true}
                  tag="span"
                >
                  (6)
                </Jss(Text)>
              </span>,
            ],
            "className": "item itemPointer",
            "onClick": [Function],
            "onMouseDown": [Function],
            "onMouseUp": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  undefined,
                  <Jss(Text)
                    className=""
                    low={undefined}
                    tag="p"
                  >
                    
                    <Jss(Text)
                      low={undefined}
                      strong={true}
                      tag="b"
                    >
                      
                    </Jss(Text)>
                    Comunicación
                  </Jss(Text)>,
                ],
              },
              "ref": null,
              "rendered": Array [
                undefined,
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      "",
                      <Jss(Text)
                        low={undefined}
                        strong={true}
                        tag="b"
                      >
                        
                      </Jss(Text)>,
                      "Comunicación",
                      undefined,
                    ],
                    "className": "",
                    "low": undefined,
                    "tag": "p",
                  },
                  "ref": null,
                  "rendered": Array [
                    "",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": "",
                        "low": undefined,
                        "strong": true,
                        "tag": "b",
                      },
                      "ref": null,
                      "rendered": "",
                      "type": [Function],
                    },
                    "Comunicación",
                    undefined,
                  ],
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Jss(Text)
                  low={true}
                  tag="span"
                >
                  (6)
                </Jss(Text)>,
                "className": "right",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "(6)",
                  "low": true,
                  "tag": "span",
                },
                "ref": null,
                "rendered": "(6)",
                "type": [Function],
              },
              "type": "span",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Droplist styles matches the snapshot 1`] = `
Object {
  "block": Object {
    "background": "#ffffff",
    "border": "1px solid #dddddd",
    "borderRadius": 4,
    "overflow": "hidden",
  },
  "extraText": Object {
    "marginLeft": 8,
  },
  "extraTextColor": Object {
    "color": "#0946CB",
  },
  "group": Object {
    "padding": Array [
      16,
      16,
      4,
    ],
  },
  "icon": Object {
    "marginRight": 8,
    "position": "absolute",
    "top": 12,
  },
  "iconText": Object {
    "display": "inline-block",
    "marginLeft": 24,
  },
  "item": Object {
    "&:hover": Object {
      "background": "#fafafa",
    },
    "display": "flex",
    "justifyContent": "space-between",
    "padding": Array [
      8,
      16,
    ],
    "position": "relative",
    "transition": "0.1s all",
  },
  "itemPointer": Object {
    "cursor": "pointer",
  },
  "onFocus": Object {
    "&:hover": Object {
      "background": "#e4edff",
    },
    "background": "#e4edff",
  },
  "right": Object {
    "float": "right",
    "marginLeft": 16,
    "transition": "0.1s all",
  },
}
`;

exports[`DroplistJSS matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Jss(Droplist)
    filter={true}
    groupIdKey="id"
    groupItemsKey="items"
    groupNameKey="text"
    groups={false}
    itemIdKey="id"
    itemTextKey="text"
    itemTextRightKey="textRight"
    items={
      Array [
        Object {
          "id": 1,
          "text": "Administrador",
          "textRight": "(222)",
        },
        Object {
          "id": 2,
          "text": "Administrador Sr",
          "textRight": "(134)",
        },
        Object {
          "id": 3,
          "text": "Administrador Jr",
          "textRight": "(52)",
        },
        Object {
          "id": 4,
          "text": "Administrar",
          "textRight": "(6)",
        },
        Object {
          "id": 5,
          "text": "Comunicación",
          "textRight": "(6)",
        },
      ]
    }
    term=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "classes": Object {
        "block": "Droplist-block-0-1-41",
        "extraText": "Droplist-extraText-0-1-49",
        "extraTextColor": "Droplist-extraTextColor-0-1-50",
        "group": "Droplist-group-0-1-42",
        "icon": "Droplist-icon-0-1-47",
        "iconText": "Droplist-iconText-0-1-48",
        "item": "Droplist-item-0-1-43",
        "itemPointer": "Droplist-itemPointer-0-1-44",
        "onFocus": "Droplist-onFocus-0-1-46",
        "right": "Droplist-right-0-1-45",
      },
      "filter": true,
      "groupIdKey": "id",
      "groupItemsKey": "items",
      "groupNameKey": "text",
      "groups": false,
      "itemIdKey": "id",
      "itemTextKey": "text",
      "itemTextRightKey": "textRight",
      "items": Array [
        Object {
          "id": 1,
          "text": "Administrador",
          "textRight": "(222)",
        },
        Object {
          "id": 2,
          "text": "Administrador Sr",
          "textRight": "(134)",
        },
        Object {
          "id": 3,
          "text": "Administrador Jr",
          "textRight": "(52)",
        },
        Object {
          "id": 4,
          "text": "Administrar",
          "textRight": "(6)",
        },
        Object {
          "id": 5,
          "text": "Comunicación",
          "textRight": "(6)",
        },
      ],
      "term": "",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "classes": Object {
          "block": "Droplist-block-0-1-41",
          "extraText": "Droplist-extraText-0-1-49",
          "extraTextColor": "Droplist-extraTextColor-0-1-50",
          "group": "Droplist-group-0-1-42",
          "icon": "Droplist-icon-0-1-47",
          "iconText": "Droplist-iconText-0-1-48",
          "item": "Droplist-item-0-1-43",
          "itemPointer": "Droplist-itemPointer-0-1-44",
          "onFocus": "Droplist-onFocus-0-1-46",
          "right": "Droplist-right-0-1-45",
        },
        "filter": true,
        "groupIdKey": "id",
        "groupItemsKey": "items",
        "groupNameKey": "text",
        "groups": false,
        "itemIdKey": "id",
        "itemTextKey": "text",
        "itemTextRightKey": "textRight",
        "items": Array [
          Object {
            "id": 1,
            "text": "Administrador",
            "textRight": "(222)",
          },
          Object {
            "id": 2,
            "text": "Administrador Sr",
            "textRight": "(134)",
          },
          Object {
            "id": 3,
            "text": "Administrador Jr",
            "textRight": "(52)",
          },
          Object {
            "id": 4,
            "text": "Administrar",
            "textRight": "(6)",
          },
          Object {
            "id": 5,
            "text": "Comunicación",
            "textRight": "(6)",
          },
        ],
        "term": "",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
